Modified gradle run task to also load plugins from plugin projects